# spidey-decomp

./: .gitattributes  .gitignore  CMakeLists.txt  DEFECTS.txt  DXinit.cpp  DXinit.h  DXsound.cpp  DXsound.h  FontTools.cpp  FontTools.h  Image.cpp  Image.h  LThread.cpp  PCGfx.cpp  PCGfx.h  PCInput.cpp  PCInput.h  PCMovie.cpp  PCMovie.h  PCMusic.cpp  PCMusic.h  PCShell.cpp  PCShell.h  PCTex.cpp  PCTex.h  PCTimer.cpp  PCTimer.h  PRE.cpp  PRE.h  README.md  Sbinit.cpp  Sbinit.h  SpideyDX.cpp  SpideyDX.h  SwapTriggerData.cpp  SwapTriggerData.h  ai.cpp  ai.h  algebra.h  backgrnd.cpp  (+245 more)
.devcontainer/: devcontainer.json
.github/workflows/: c-cpp.yml
directx/include/: dinput.h
lib/: safesehzlib.lib  zlib.lib
tests/sfx/: dem1.sfx  dem4.sfx  l1a1.sfx  l1a2.sfx  l1a3.sfx  l1a4.sfx  l2a1.sfx  l2a2.sfx  l3a1.sfx  l3a2.sfx  l3a3.sfx  l3a4.sfx  l3a5.sfx  l4a1.sfx  l5a1.sfx  l5a2.sfx  l5a3.sfx  l5a4.sfx  l5a5.sfx  l5a6.sfx  l5a7.sfx  l6a1.sfx  l6a2.sfx  l6a3.sfx  l6a4.sfx  l7a1.sfx  l7a2.sfx  l7a3.sfx  l7a4.sfx  l7a5.sfx  l8a1.sfx  l8a2.sfx  l8a3.sfx  l8a4.sfx  l8a5.sfx  l8a6.sfx  l9a1.sfx  l9a2.sfx  l9a3.sfx  l9a4.sfx  (+21 more)
thps2-stuff/: Skate2.pjt  Skate2.ptg  Skate2.sbl  Skate2.tag  create.mik  decls.h  fileio.mik  globdefs.mik  init.mik  m3d.mik  m3dasm.mik  m3dcolij.mik  main.mik  mem.mik  qdefs.mik  rail.mik  sk2.vpj  sk2.vpw  skate.seq  skate.vpj  skate.vpw  skate.vtg  skate2.psp  skate2.sfx  skate2.vpj  types.h
tools/: SpideyPC.h  data_spitter.py  differ.py  dunno.py  file_and_function_spitter.py  file_names.txt  file_names_to_files.py  func_exporter.py  name_replacer.py  name_spitter.py  names.json  overrides.json  prototype_spitter.py  prototypes.json  requirements.txt  result.txt  struct.txt  struct_exporter.py  struct_to_code.py
